<resources>
    <string name="google_maps_key">AIzaSyBGsTaBCjsSttpFMUkUAiirIhcFdeIMKpg</string>

    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="enter_your_credentials_to_join">Enter your credentials to join.</string>
    <string name="email_or_mobile_number">Email or Mobile Number</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="become_a_member">Become a member</string>
    <string name="at_piccup_we_offer_you_all_what_you_need">At piccup we offer you all what you need.</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="referral_code">Referral Code</string>
    <string name="optional">Optional*</string>
    <string name="you_ll_need_to_confirm_this_number">You’ll need to confirm this number.</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="by_continuing_you_may_recive_an_sms_for_verification_message">By continuing you may recive an SMS for verification message.</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_the_verification_code">Enter the verification code</string>
    <string name="by_entering_the_verification_code_the_registeration_process_will_be_completed">By entering the verification code the registeration process will be completed.</string>
    <string name="_20127_0224_224">+20127 0224 224</string>
    <string name="resend_code_in">Resend Code in</string>
    <string name="follow_pay_and_renew">Follow, pay and renew</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="request_a_ride_to_your_school">Request a ride to your school</string>
    <string name="new_request">New request</string>
    <string name="recent_requests">Recent Requests</string>
    <string name="by_just_some_steps_you_can_request_your_childs_s_bus">By just some steps you can request your childs’s bus</string>
    <string name="no_reqeusts_currently">No requests currently</string>
    <string name="you_have_a_current_ride_now">You have a current ride now !</string>
    <string name="you_can_follow_your_ride_status_from_here">you can follow your ride status from here</string>
    <string name="follow_now">Follow now</string>
    <string name="student_name">Student name</string>
    <string name="approved">Approved</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1_student_informations">1- Student informations</string>
    <string name="secondary_phone_number">Secondary phone number</string>
    <string name="land_line_number">Land Line Number</string>
    <string name="set_the_home_address">Set the home address</string>
    <string name="enter_home_address_with_details">Enter home address with details..</string>
    <string name="city">City</string>
    <string name="select_school">Select school</string>
    <string name="select_grade">Select grade</string>
    <string name="set_entry_time">Set entry time</string>
    <string name="set_exit_time">Set exit time</string>
    <string name="_3_package_details">3- Package Details</string>
    <string name="please_select_your_package">Please select your package</string>
    <string name="send">Send</string>
    <string name="be_where_you_belong">Be where you belong</string>
    <string name="type_text">West City Club was built on 33 acres of dedication and ideal standards to raise an empowered generation of champions in a community where they feel like they belong,</string>
    <string name="monthly_plan">Monthly Plan</string>
    <string name="semster_plan">Semster Plan</string>
    <string name="egp">EGP</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm">Confirm</string>
    <string name="per_month">per Month</string>
    <string name="per_semester">per Semester</string>
    <string name="select_section">Select Section</string>
    <string name="your_application_has_been_applied">Your application has been applied</string>
    <string name="we_ll_contact_you_soon_on_the_phone_number_you_entered_to_complete_the_registration_process">We\'ll contact you soon on the phone number you entered to complete the registration process.</string>
    <string name="finish">FINISH</string>
</resources>