<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.newrequest.Step1Fragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/_1_student_informations"
            android:textColor="@color/dark"
            android:textSize="28dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_entering_the_verification_code_the_registeration_process_will_be_completed"
            android:textColor="@color/light"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/next"
            app:layout_constraintTop_toBottomOf="@+id/subTitle">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/studentName"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/auth_edittext"
                    android:hint="@string/student_name"
                    android:padding="10dp"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginTextDesc" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/auth_edittext"
                    android:hint="@string/phone_number"
                    android:padding="10dp"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginTextDesc" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/secondaryPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/auth_edittext"
                    android:hint="@string/secondary_phone_number"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginTextDesc" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/landLineNumber"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/auth_edittext"
                    android:hint="@string/land_line_number"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginTextDesc" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/auth_edittext"
                    android:clickable="true"
                    android:drawableEnd="@drawable/navigation"
                    android:focusable="false"
                    android:hint="@string/set_the_home_address"
                    android:inputType="none"
                    android:padding="10dp"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginTextDesc" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/auth_edittext"
                    android:gravity="top"
                    android:hint="@string/enter_home_address_with_details"
                    android:padding="10dp"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginTextDesc" />

            </LinearLayout>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_disable"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:enabled="true"
            android:paddingStart="34dp"
            android:paddingEnd="10dp"
            android:text="Next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>